# fullstack-app

./: .gitignore
api/: .env.example  Cargo.toml
api/entity/: Cargo.toml
api/entity/src/: lib.rs  user.rs
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20220101_000001_create_user.rs  main.rs
api/src/: main.rs  pool.rs
client/: .eslintrc  .prettierrc  .swcrc  package.json  tsconfig.json
client/public/: index.html
client/public/styles/: index.css
client/src/: index.tsx
client/src/app/: index.tsx
client/src/lib/React/: index.ts
client/src/lib/ReactDOM/: index.ts
