[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [".", "entity", "migration"]

[dependencies]
async-stream = { version = "^0.3" }
async-trait = { version = "0.1" }
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
serde_json = { version = "^1" }
dotenv = "0.15.0"
dotenv_codegen = "*"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "^0.7.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
], default-features = false }

[dependencies.sea-orm-rocket]
git = "https://github.com/SeaQL/sea-orm"
